# Pratham-Shah-MANAS-AI-TP-24

./: Bonus Task by Pratham Shah.ipynb  Decision Tree by Pratham Shah.ipynb  Ensemble methods.ipynb  Logistic Regression by Pratham Shah.ipynb  Multiple Regression by Pratham Shah.ipynb  Output.csv  README.md  Tensorflow CNN.ipynb  gettingdata.py  main.ipynb  multireg.py  singlereg.py
.ipynb_checkpoints/: Multiple Regression-checkpoint.ipynb  gettingdata-checkpoint.py
astar/: CMakeLists.txt  package.xml
astar/src/: path_finder.cpp
computer vision/: modifier.py  reader.py
simple_chat/: package.xml  setup.py
simple_chat/simple_chat/: chat_publisher.py  chat_subscriber.py
