<package format="2">
  <name>simple_chat</name>
  <version>0.0.1</version>
  <description>A simple chat interface using ROS2 publisher and subscriber</description>
  <maintainer email="your_email@example.com">Pratham Shah</maintainer>
  <license>Apache 2.0</license>

  <dependencies>rclpy</dependencies>
  <dependencies>std_msgs</dependencies>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>pytest</test_depend>
</package>
